# badminton_player_tracker

./: CMakeLists.txt  README.md
include/: body.h  body.hpp  bounds.hpp
src/: body.cpp  bounds.cpp  main.cpp
